--- a/airtable-pricing.html
+++ b/airtable-pricing.html
@@ -1,3 +1,4 @@
+<!-- this is a remake of one of the plan cards on https://airtable.com/pricing-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,43 +14,43 @@
     <div class="portlet-title">
         Most popular
     </div>
-    <div class="mbtm flex flex-column huge cyanLight2">
+    <div class="mbtm flex portlet-body">
         <h3>Pro</h3>
-        <div class="huge mbtm">For teams and departments who need to build connected apps to power their most important processes</div>
-        <div class="flex items-end mbtm">
-            <div class="huge h1 mr2">$20</div>
-            <div class="mb1-and-half">
-                per seat /month<br>
-                billed annually
+        <div class="mbtm">For teams and departments who need to build connected apps to power their most important processes</div>
+        <div class="flex price-detail mbtm">
+            <div class="price">$20</div>
+            <div>
+                per seat /month<br>billed annually
             </div>
         </div>
-        <div class="pb1 flex">
-            <div class="flex cyanLight2" style="min-width: 150px;">
-                <a href="/signup?utm_source=pricing-pro" class="pill mx-auto p2 m1 center width-full blueBright text-white blueDark1-hover"><button class="button-info"> Try for free</button></a>
+        <div class="flex">
+            <div style="min-width: 150px;">
+                <a href="#"><button class="button-info"> Try for free</button></a>
             </div>
         </div>
-        <div class="pb1-and-half">
+        <div>
             <p>Everything in <span class="strong">Plus</span>, plus:</p>
         </div>
         <div class="mbtm">
-            <div class="flex pb-half" style="align-items: start;">
-                <span><div>10 <span style="border-bottom: 2px dotted rgb(51, 51, 51); cursor: text;">extensions</span> per base</div></span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>7 sync integrations including Jira Cloud</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>50,000 records per base</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>20GB of attachments per base</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>Gantt &amp; Timeline Views</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>Granular interface permissions</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>1-year revision &amp; snapshot history</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>Personal &amp; locked views</span></div>
-                <div class="flex pb-half" style="align-items: start;"><span>Field &amp; table editing permissions</span></div>
+            <div class="pdb">
+                <span><div>10 <span style="border-bottom: 2px dotted black;">extensions</span> per base</div></span></div>
+                <div class="pdb" >7 sync integrations including Jira Cloud</div>
+                <div class="pdb">50,000 records per base</div>
+                <div class="pdb">20GB of attachments per base</div>
+                <div class="pdb">Gantt & Timeline Views</div>
+                <div class="pdb">Granular interface permissions</div>
+                <div class="pdb">1-year revision & snapshot history</div>
+                <div class="pdb">Personal & locked views</div>
+                <div class="pdb">Field & table editing permissions</div>
             </div>
             <div>
-                <div class="flex items-center quiet link-unquiet mbtm">
-                    <div class="small pill caps strong pointer flex-none">All features</div>
+                <div class="flex mbtm dropdown">
+                    <div class="strong">All features</div>
                     <div>
-                        <svg width="12" height="12" viewBox="0 0 12 12" class="ml-half" style="shape-rendering: geometricprecision;"><path fill-rule="evenodd" fill="currentColor" d="M3.6011,4.00002 L8.4011,4.00002 C8.8951,4.00002 9.1771,4.56402 8.8811,4.96002 L6.4811,8.16002 C6.2411,8.48002 5.7611,8.48002 5.5211,8.16002 L3.1211,4.96002 C2.8241,4.56402 3.1071,4.00002 3.6011,4.00002"></path></svg>
+                        <svg width="12" height="12" ><path d="M3.6011,4.00002 9.1771,4.56402 8.8811,4.96002 L6.4811,8.16002 C6.2411"></path></svg>
                     </div>
-                </div></div>
+                </div>
+            </div>
     </div>
 </div>
 
@@ -83,15 +84,9 @@
         display: flex;
     }
 
-
-    .flex-column{
-        position: relative;
-        font-size: 1rem;
+    .portlet-body{
         font-weight:500;
-        font-family: 'GT Eesti Display',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
         letter-spacing: .01em;
-        -webkit-font-smoothing: antialiased;
-        font-feature-settings: 'calt' 0;
         border-bottom-right-radius: 14px;
         border-bottom-left-radius: 14px;
         margin-bottom: 1rem;
@@ -100,58 +95,48 @@
         padding-top: 1rem;
         padding-bottom: 1rem;
         background-color: #d0f0fd;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
         flex-direction: column;
-        display: flex;
         line-height: 1.25;
     }
 
-    .huge.h1 {
+    .price {
     font-size: 2.8rem;
     margin-right: 1rem
-}
-.items-end {
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-    /* -ms-flex-align: end;
-    -ms-grid-row-align: flex-end; */
-    align-items: flex-end;
-}
-.button-info {
-    border-radius: 9999px;
-    color: hsl(0,0%,100%);
-    margin-left: auto;
-    margin-right: auto;
-    margin: 0.5rem;
-    padding: 1rem 2rem 1rem 2rem;
-    width: 100%;
-    background-color: #2d7ff9;
-    border-style:hidden;
-    font-size: 1rem;
-    font-family: 'GT Eesti Display',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
-    letter-spacing: .01em;
-    -webkit-font-smoothing: antialiased;
-    font-feature-settings: 'calt' 0;
-    line-height: 1.25;
-}
-.strong {
-    font-weight: 700;
-}
+    }
 
+    .price-detail {
+        align-items:center;
+    }
+    
+    .button-info {
+        border-radius: 9999px;
+        color: white;
+        margin: 0.5rem;
+        padding: 1rem 2rem 1rem 2rem;
+        width: 100%;
+        background-color: #2d7ff9;
+        border-style:hidden;
+        font-size: 1rem;
+        font-family: 'GT Eesti Display',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
+        letter-spacing: .01em;
+        line-height: 1.25;
+    }
 
-.pb-half {
-    padding-bottom: 0.25rem;
-    display: flex;
-}
+    .strong {
+        font-weight: 700;
+    }
 
-.quiet {
-    opacity: .75;
-    cursor: pointer;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: .1em;
-}
+    .pdb {
+        padding-bottom: 0.25rem;
+    }
+
+    .dropdown {
+        opacity: .75;
+        cursor: pointer;
+        font-size: 11px;
+        text-transform: uppercase;
+        letter-spacing: .1em;
+    }
 
 </style>
 </body>
