--- a/food-recipe.html
+++ b/food-recipe.html
@@ -29,6 +29,8 @@
         img{
             width: 400px;
             height: 300px;
+            border: 3px solid black;
+            /* margin: 2.5px; */
         }
     </style>
 </head>
@@ -48,58 +50,72 @@
                 <h3>Ingredients</h3>
                 <table>
                     <tr>
+                        <th width="10%">S/N</th>
                         <th width="50%">Name</th>
-                        <th width="50%">Measurement</th>
+                        <th width="40%">Measurement</th>
                     </tr>
                     <tr>
+                        <td>1</td>
                         <td>Rice</td>
                         <td>4cups</td>
                     </tr>
                     <tr>
+                        <td>2</td>
                         <td>Sliced Cabbage</td>
                         <td>5cups</td>
                     </tr>
                     <tr>
+                        <td>3</td>
                         <td>Sliced Carrot</td>
                         <td>2cups</td>
                     </tr>
                     <tr>
+                        <td>4</td>
                         <td>Green beans</td>
                         <td>2cups</td>
                     </tr>
                     <tr>
+                        <td>5</td>
                         <td>Peas</td>
                         <td>1/2cups</td>
                     </tr>
                     <tr>
+                        <td>6</td>
                         <td>Sliced Green pepper</td>
                         <td>1cup</td>
                     </tr>
                     <tr>
+                        <td>7</td>
                         <td>Cow Liver</td>
                         <td>300g</td>
                     </tr>
                     <tr>
+                        <td>8</td>
                         <td>Chicken</td>
                         <td>2kg</td>
                     </tr>
                     <tr>
+                        <td>9</td>
                         <td>Vegetable Oil</td>
                         <td>200ml</td>
                     </tr>
                     <tr>
+                        <td>10</td>
                         <td>Curry Powder</td>
                         <td>2 Tablespoons</td>
                     </tr>
                     <tr>
+                        <td>11</td>
                         <td>Sliced Onions</td>
                         <td>1cup</td>
                     </tr>
                     <tr>
+                        <td>12</td>
                         <td>Salt</td>
                         <td>To Taste</td>
                     </tr>
                     <tr>
+                        <td>13</td>
                         <td>Pepper</td>
                         <td>To Taste</td>
                     </tr>
