--- a/css-major.html
+++ b/css-major.html
@@ -13,52 +13,42 @@
         <!-- <h3>First Section</h3>  -->
         <p>
           Hello, I'm <b>Ruth Obidike.</b>, but I love to be called<i> Ruth Chisom</i>. If there's one thing that excites me, it's <em>Technology</em>. I mean who wouldn't love their problems to be solved easily and quickly.
-          This is what <i>technology</i> does across border. Ilove the fact that it brings people closer, creates more opportunities and improves the startdard of our daily living.
+          This is what <i>technology</i> does across border. I love the fact that it brings people closer, creates more opportunities and improves the startdard of our daily living!
         </p>
       </section>
-
 
       <section class="section-two">
         <!-- <h3>Second Section</h3> -->
         <p>
           In the past few weeks of my journey with Stutern, I have learnt the following;
-<ol>
-          <li>HTML<b>(Hyper Text Markup Language)</b> is the standard markup
-          language for displaying documents in a web browser. It is yhe basic structure of a webpage.</li>
-
-
-          <li>CSS<b>(Cascading Style Sheets)</b> is used to describe
-          <i>styles</i> for displaying documents written in
-        the markup language <em>i.e HTML, or XML</em>.</li>
-
-
- <li>You can use the <i>inline</i>, <i>internal</i> or <i>external </i> method of styling</li>
-
-
-<li>CSS is very important in organizing your webpage. Without it, everything might seem too scattered or clumsy</li>
-</ol>
+          <ol>
+            <li>
+              HTML<b>(Hyper Text Markup Language)</b> is the standard markup language for displaying documents in a web browser. It is yhe basic structure of a webpage.
+            </li>
+            <li>
+              CSS<b>(Cascading Style Sheets)</b> is used to describe styles for displaying documents written in the markup language <em>i.e HTML, or XML</em>.
+            </li>
+            <li>
+              You can use the <b>inline</b>, <b>internal</b> or <b>external </b> method of styling
+            </li>
+            <li>
+              CSS is very important in organizing your webpage. Without it, everything might seem too scattered or clumsy
+            </li>
+          </ol>
         </p>
       </section>
-
 
       <section class="section-three">
         <!-- <h3>Third Section</h3> -->
         <p>
-          <b>Padding:</b> This is the space between an element's border and the
-          content inside it. <i>padding</i> property controls the
+          <b>Padding:</b> This is the space between an element's border and the content inside it. <i>Padding</i> property controls the
           space inside an element.
         </p>
-
-
         <p>
-          <b>Margin:</b> This is the space around an element's border.
-          <i>Margin</i> property controls the space outside an element.
+          <b>Margin:</b> This is the space around an element's border. <i>Margin</i> property controls the space outside an element.
         </p>
-
-
         <p>
-          <b>Border:</b> This is the edge/wall of an element. 
-The <i>border</i> property allows you to specify
+          <b>Border:</b> This is the edge/wall of an element. <i>Border</i> property allows you to specify
           the style, width, and color of an element's border.
         </p>
       </section>
