--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,17 @@
   </head>
   <body>
     <main>
-        <div>
-            <h4> Ruth Chisom Obidike </h4>
+<div class="logo_container">
+        <div class="image_container"><img src="./Logo1.6.PNG" alt="" /></div>
+        <h4> Ruth Chisom Obidike </h4>
+        <div class="sections_tab">
+          <div>about</div>
+          <div>clients</div>
+          <div>services</div>
+          <div id="contact_section">contact</div>
         </div>
+      </div>
+        
         <div class="class1">
       <div>
         <img src="./assets/profile.jpg" alt="" />
