--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
-<div class="logo_container">
-        <div class="image_container"><img src="./Logo1.6.PNG" alt="" /></div>
+      <div class="logo_container">
+        <div class="image_container"><img src="./images/plogo.jpg" alt="" /></div>
         <h4> Ruth Chisom Obidike </h4>
         <div class="sections_tab">
           <div>about</div>
@@ -20,38 +20,40 @@
         </div>
       </div>
         
-        <div class="class1">
-      <div>
-        <img src="./assets/profile.jpg" alt="" />
-      </div>
-      <div class="class2">
-        <h1>Hi there!</h1>
-        <p>
-          Fullstack Software Developer keen on taking new task to help widen her knowledge and proficiency in solving problems. I have a deep
-          desire to excel and continuously improve in my work. Learn more about
-          my journey below.
-        </p></div>
+      <div class="class1">
+        <div>
+          <img src="./images/profile.jpg" alt="" />
+        </div>
+        <div>
+          <h1>Hi there!</h1>
+          <p>
+            Fullstack Software Developer keen on taking new task to help widen her knowledge and proficiency in solving problems. I have a deep
+            desire to excel and continuously improve in my work. Learn more about
+            my journey below.
+          </p>
+        </div>
       </div>
       <div class="class1">
-      <div>
-        <h3>My Career So Far</h3>
-        <p>
-          Always up for a challenge. For, the past five(5) years I have worked for a start-ups. Currently I am running a Software Engineering
-          internship at Stutern.
-        </p>
-      </div>
-      <div>
-        <ul>
-            <li> HTML</li>
-            <li> CSS </li>
-            <li>JAVASCRIPT </li>
-            <li> PHP </li>
-            <li> MONGODB </li>
-            <li> MYSQL </li>
-            <li> ANGULARJS </li>
-            <li> ANGULAR </li>
-            <li> REACTJS </li>
-        </ul></div>
+        <div>
+          <h3>My Career So Far</h3>
+          <p>
+            Always up for a challenge. For, the past five(5) years I have worked for a start-ups. Currently I am running a Software Engineering
+            internship at Stutern.
+          </p>
+        </div>
+        <div>
+          <ul>
+              <li> HTML</li>
+              <li> CSS </li>
+              <li>JAVASCRIPT </li>
+              <li> PHP </li>
+              <li> MONGODB </li>
+              <li> MYSQL </li>
+              <li> ANGULARJS </li>
+              <li> ANGULAR </li>
+              <li> REACTJS </li>
+          </ul>
+        </div>
       </div>
     </main>
   </body>
